# Asm-RISCV
# Copyright © 2020-2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "asm_riscv"
version = "0.1.0"
license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "RISC-V Assembly Encoder / Decoder."
repository = "https://github.com/AldaronLau/wari"
documentation = "https://docs.rs/asm_riscv"
homepage = "https://github.com/AldaronLau/wari/blob/stable/asm_riscv/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "compilers",
    "encoding",
    "hardware-support",
    "parser-implementations",
]
keywords = ["riscv", "assembly", "encode", "decode", "asm"]
readme = "README.md"
edition = "2021"

[dependencies]
